--- a/style/style.css
+++ b/style/style.css
@@ -35,7 +35,7 @@ body {
     left: 0;
     width: 100%;
     padding: 2rem 7%;
-    background: skyblue;
+    background: transparent;
     display: flex;
     align-items: center;
     z-index: 100;
@@ -100,7 +100,7 @@ section {
 }
 
 .home-content p {
-    font-size: 1.6rem;
+    font-size: 1.2rem;
 }
 
 .home-content .social-media a {
@@ -151,10 +151,71 @@ section {
     transform: translateY(-50%);
     width: 768px;
     height: 768px;
-    background: red;
     overflow: hidden;
     pointer-events: none;
 }
 
+.home .profession-container .profession-box {
+    position: absolute;
+    top: 0;
+    right: 0;
+    width: 768px;
+    height: 768px;    
+    border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.home .profession-box .profession {
+    position: absolute;
+    left: 0;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    color: var(--main-color);
+    transform: rotate(calc(360deg / 4 * var(--i)));
+    transform-origin: 384px;
+    background: var(--bg-color);
+    padding: 13px 0;
+}
+
+.home .profession-box .profession:nth-child(1) i{
+    margin-right: 15px;
+}
+
+.home .profession-box .profession:nth-child(2),
+.home .profession-box .profession:nth-child(4) {
+    padding-bottom: 20px; 
+}
+
+.home .profession i {
+    font-size: 3.8rem;
+}
+
+.home .profession h3 {
+    font-size: 2.2rem;
+    line-height: 1;
+    font-weight: 400;
+}
+
+.home .profession-box .circle {
+    width: 560px;
+    height: 560px;
+    border: 3px solid var(--main-color);
+    border-radius: 50%;
+}
+
+.home .profession-container .overlay {
+    position: absolute;
+    top: 0;
+    right: 0;
+    width: 0;
+    height: 0;
+    border-top: 384px solid var(--main-color);
+    border-right: 384px solid var(--main-color);
+    border-bottom: 384px solid var(--main-color);
+    border-left: 384px solid var(--main-color);
+}
 
 
