--- a/style/style.css
+++ b/style/style.css
@@ -20,7 +20,7 @@
 }
 
 html {
-    font-size: 100%;
+    font-size: 85%;
     overflow-x: hidden;
 }
 
@@ -53,8 +53,8 @@ body {
     position: relative;
     font-size: 1.7rem;
     color: var(--white-color);
-    font-weight: 500;
-    margin-right: 3.5rem;
+    font-weight: 200;
+    margin-right: 2.5rem;
 }
 
 .navbar a.active::before {
@@ -75,7 +75,7 @@ body {
 
 section {
     min-height: 100vh;
-    padding: 10rem 7% 2rem;
+    padding: 5rem 7% 2rem;
 }
 
 .home {
@@ -84,18 +84,18 @@ section {
 }
 
 .home .home-content {
-    max-width: 44rem;
+    max-width: 40rem;
 }
 
 .home-content h3 {
     font-size: 3.2rem;
-    font-weight: 700;
-    line-height: .3;
+    font-weight: 400;
+    line-height: .2;
 }
 
 .home-content h1 {
-    font-size: 5.6rem;
-    font-weight: 700;
+    font-size: 5rem;
+    font-weight: 550;
     margin-bottom: .3rem;
 }
 
@@ -149,8 +149,8 @@ section {
     top: 50%;
     right: 0;
     transform: translateY(-50%);
-    width: 768px;
-    height: 768px;
+    width: 800rem;
+    height: 750px;
     overflow: hidden;
     pointer-events: none;
 }
@@ -159,7 +159,7 @@ section {
     position: absolute;
     top: 0;
     right: 0;
-    width: 768px;
+    width: 855px;
     height: 768px;    
     border-radius: 50%;
     display: flex;
@@ -175,13 +175,13 @@ section {
     flex-direction: column;
     color: var(--main-color);
     transform: rotate(calc(360deg / 4 * var(--i)));
-    transform-origin: 384px;
+    transform-origin: 400px;
     background: var(--bg-color);
-    padding: 13px 0;
+    padding: 10px 0;
 }
 
 .home .profession-box .profession:nth-child(1) i{
-    margin-right: 15px;
+    margin-right: 10px;
 }
 
 .home .profession-box .profession:nth-child(2),
@@ -190,7 +190,7 @@ section {
 }
 
 .home .profession i {
-    font-size: 3.8rem;
+    font-size: 3rem;
 }
 
 .home .profession h3 {
@@ -215,7 +215,42 @@ section {
     border-top: 384px solid var(--main-color);
     border-right: 384px solid var(--main-color);
     border-bottom: 384px solid var(--main-color);
-    border-left: 384px solid var(--main-color);
+    border-left: 650px solid transparent;
 }
 
+.home-img img{
+    position: absolute;
+    width: 100;
+    bottom: 0;
+    right: 0;
+    pointer-events: none;
+}
+
+span {
+    color: var(--main-color);
+}
+
+.about {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.about-img {
+    width: 40vw;
+}
+
+.heading {
+    font-size: 4.5rem;
+    text-align: center;
+}
+
+.about-content h2 {
+    text-align: left;
+    line-height: 1.2;
+}
+
+.about-content h3 {
+    font-size: 2rem;
+}
 
