--- a/style/style.css
+++ b/style/style.css
@@ -259,7 +259,6 @@ span {
     justify-content: center;
     align-items: center;
     gap: 3rem;
-
 }
 
 .about-img {
@@ -294,6 +293,15 @@ span {
     margin-bottom: 5rem;
 }
 
+.services {
+    min-height: auto;
+    padding-bottom: 7rem;
+}
+
+.services h2 {
+    margin-bottom: 5rem;
+}
+
 .services .services-container {
     display: flex;
     justify-content: center;
@@ -311,6 +319,12 @@ span {
     text-align: center;
     border-top: .6rem solid var(--main-color);
     border-bottom: .6rem solid var(--main-color);
+    transition: .5s ease;
+}
+
+.services-container .services-box:hover {
+    box-shadow: 0 .1rem 2rem var(--shadow-color);
+    transform: scale(1.02);
 }
 
 .services-box i {
@@ -320,12 +334,58 @@ span {
 
 .services-box h3 {
     font-size: 2rem;
+    transition: .5s ease;
+}
+
+.services-box:hover h3 {
+    color: var(--main-color);
 }
 
 .services-box p {
     font-size: 1rem;
-    margin: 1rem 0 3rem;
+    margin: 1rem 0 1rem;
 }
 
+.portfolio {
+    padding-bottom: 10rem;
+}
 
+.portfolio h2 {
+    margin-bottom: 4rem;
+}
+
+.portfolio .portfolio-container {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    align-items: center;
+    gap: 2.5rem;
+}
+
+.portfolio-container .portfolio-box {
+    position: relative;
+    display: flex;
+    border-radius: 2rem;
+    box-shadow: 0 0 1rem rgba(0, 0, 0, .1);
+    overflow: hidden;
+}
+
+.portfolio-box img {
+    width: 100%;
+}
+
+.portfolio-box .portfolio-layer {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: linear-gradient(rgba(0, 0, 0, .1), var(--main-color));
+    color: var(--white-color);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    text-align: center;
+    padding: 0 4rem;
+}
 
