--- a/style/style.css
+++ b/style/style.css
@@ -371,6 +371,11 @@ span {
 
 .portfolio-box img {
     width: 100%;
+    transition: .5s ease;
+}
+
+.portfolio-box:hover img {
+    transform: scale(1.1);
 }
 
 .portfolio-box .portfolio-layer {
@@ -387,5 +392,29 @@ span {
     flex-direction: column;
     text-align: center;
     padding: 0 4rem;
+    opacity: 0;
+    transition: .5s ease;
 }
 
+.portfolio-box:hover .portfolio-layer {
+    opacity: 1;
+}
+
+.portfolio-layer h4 {
+    font-size: 3rem;
+}
+
+.portfolio-layer p {
+    font-size: 1.2rem;
+    margin: .3rem 0 1rem;
+}
+
+.portfolio-layer a {
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    width: 5rem;
+    height: 5rem;
+    background: var(--white-color);
+    border-radius: 50%;
+}
